--- a/report/tests.tex
+++ b/report/tests.tex
@@ -5,20 +5,43 @@
 \subsection{Исследование быстродействия системы}
 
 \tab
-Исследование быстродействия системы было проведено при помощи инструмента \en{Google Chrom Developer Tools} в веб браузере \en{Google Chrome}. Перед началом тестирования в систему были загружены данные о 5000 различных отчётах, сгенерированные автоматически.
+Исследование быстродействия системы было проведено при помощи инструмента \en{Google Chrom Developer Tools} в веб браузере \en{Google Chrome}. В ходе тестирование было исследовано быстродействие системы как без загруженных данных так и с загруженными данными.
 
 \tab
-Каждый запрос к API системы был произведён 15 раз, после чего было получено среднее арифметическое значение времени ответа системы.
+Для системы без данных каждый запрос к API системы был произведён 15 раз, после чего было получено среднее арифметическое значение времени ответа системы.
 Во время тестирования клиентское и серверное устройство были соединены в локальную сеть при помощи кабеля \en{Ethernet}.
 Полученные значение представлены в таблице 5.
-% \tablefive
+\tablefive
 
 \tab
-Таким же методом была найдена средняя скорость выгрузки данных в формате .CSV с сервисного сайта системы. Полученные данные представлены в таблице 6.
-% \tablesix
+Таким же методом была найдена средняя скорость выгрузки данных в формате .CSV с сервисного сайта системы, она составила 0.5 секунды.
 
 \tab
-Результаты???
+После этого в систему были загружены данные о 5200 различных отчётах, сгенерированные автоматически.
+Для этого было временно отключено ограничение по частоте отправки и использован скрипт для \en{Postman}.
+Каждый отчёт содержал две фотографии, имеющие суммарный размер 347 kb. Среднее время загрузки одного отчёта с двумя фотографиями составило 148 мс.
+
+\tab
+До загрузки отчётов размер системы составлял 5.5 mb.
+Загрузка отчётов заняла 19 минут, по прошествии этого времени система заняла 2.5 gb на диске.
+Замер быстродействия был проведён описанным выше способом.
+Значения скорости обработки запросов после загрузки представлена в таблице 6.
+\tablesix
+
+\tab
+Средняя скорость выгрузки данных в формате .CSV с сервисного сайта системы, заполненной данными составила 17.3 секунды.
+
+\tab
+Результаты исследования показали, что с увеличением количества загруженных отчётов повышается время запроса их получения.
+Несмотря на то, что из-за того, что клиентская сторона системы выполняет загрузку данных асинхронно, а также производит кеширование запросов, влияния на производительность клиентской части системы увеличение времени ожидание ответа оказать не должно, оно может повлиять на других потенциальных пользователей API.
+
+\tab
+В качестве решения проблемы предложено для ответа на этот запрос на серверной стороне приложения использовать технологию \en{HTTP Streaming}.
+Это позволит как снизить количество запросов (вместо повторных запросов пользователь API будет просто подписываться на получение новых), так и уменьшить единовременную нагрузку на сеть путём постепенной загрузки отчётов.
+
+\tab
+Для клиентской части приложения были подготовлены обработчики событий для подписки на поток отчётов и получение такого потока.
+На серверной же части приложения актуальная на данный момент версия фреймворка \en{Django} не поддерживает \en{HTTP Streaming} асинхронно, не блокируя при этом остальной траффик.
 
 \subsection{Исследование API серверной части ПО}
 
@@ -32,18 +55,6 @@
 Кроме того, в случаях, когда одним из полей ответа является URL, проверялась его доступность.
 В тех же случаях, когда в зависимости от введённых данных ответ на запрос может различаться (например, различные дополнительные параметры сортировки или сообщения об ошибке), после выполнения основного корректного запроса выполнялись также и запросы с дополнительными параметрами и ошибками.
 Исключение составили те запросы, на количество которых было установлено ограничение по частоте отправки, такие запросы отправлялись только по одному разу.
-
-\tab
-В качестве примера ниже приведён код проверки доступности фотографии профиля, полученной в результате запроса получения данных текущего пользователя:
-
-\begin{lstlisting}[breaklines=true]
-pm.test('Response photo is valid', () => {
-  const port = pm.collectionVariables.get("SERVER_PORT");
-  pm.sendRequest(`http://localhost:${port}${pm.response.json()['thumbnail']}`, (err, response) => {
-    pm.expect(response.code).to.be.equal(200, "Response photo unavailable!");
-  });
-});
-\end{lstlisting}
 
 \tab
 Для тестирования запросов, требующих авторизации, данные пользователя, необходимые для входа в систему, были сохранены в переменные коллекции.
@@ -81,8 +92,8 @@ pm.test('Response photo is valid', () => {
 \tab
 Для обученной нейронной сети был получен следующий результат:
 \begin{itemize}
-	\item Средняя точность классификации: 
-	\item Среднее время обработки изображения:
+	\item Средняя точность классификации: 92\%
+	\item Среднее время обработки изображения: 0.4 сек
 \end{itemize}
 
 \tab
@@ -97,7 +108,7 @@ pm.test('Response photo is valid', () => {
 \tab
 Последовательности действий пользователей системы были проанализированы при помощи web интерфейса клиентской части системы и её сервисного сайта.
 В таблице 7 указано количество действий пользователя для выполнения заявленных сценариев использования.
-% \tableseven
+\tableseven
 
 \tab
 В результате анализа был сделан вывод о том, что количество действий, которые необходимо произвести пользователю для выполнения сценария использования в большинстве случаев близко к количеству данных, которые он загружает в систему в этом сценарии.
